--- a/config.json
+++ b/config.json
@@ -16,12 +16,12 @@
     "EMAIL": "",
     "PASSWORD": "",
     "OTPKEY": "",
-    "BOTNAME": "🔰𝗥𝗮𝗵𝗮𝘁_𝗕𝗼𝘁🔰",
+    "BOTNAME": "𝗦𝗛𝗨𝗩𝗢 𝗕𝗕𝗭𝗭𝗭",
     "PREFIX": "-",
     "ADMINBOT": [
-        "61582311465479",
-        "61582311465479",
-        "61582311465479"
+        "100082387123597",
+        "",
+        ""
     ],
     "NDH": [
         "100001039692046"
