--- a/appstate.json
+++ b/appstate.json
@@ -5,8 +5,8 @@
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2025-10-25T05:22:29.083Z",
-        "lastAccessed": "2025-10-25T05:22:29.083Z"
+        "creation": "2025-10-25T07:11:11.128Z",
+        "lastAccessed": "2025-10-25T07:11:11.131Z"
     },
     {
         "key": "datr",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-25T05:22:29.083Z",
-        "lastAccessed": "2025-10-25T05:22:29.083Z"
+        "creation": "2025-10-25T07:11:11.131Z",
+        "lastAccessed": "2025-10-25T07:11:11.131Z"
     },
     {
         "key": "sb",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-25T05:22:29.083Z",
-        "lastAccessed": "2025-10-25T05:22:29.083Z"
+        "creation": "2025-10-25T07:11:11.131Z",
+        "lastAccessed": "2025-10-25T07:11:11.131Z"
     },
     {
         "key": "locale",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-25T05:22:29.083Z",
-        "lastAccessed": "2025-10-25T05:22:29.083Z"
+        "creation": "2025-10-25T07:11:11.131Z",
+        "lastAccessed": "2025-10-25T07:11:11.131Z"
     },
     {
         "key": "vpd",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-25T05:22:29.083Z",
-        "lastAccessed": "2025-10-25T05:22:29.083Z"
+        "creation": "2025-10-25T07:11:11.131Z",
+        "lastAccessed": "2025-10-25T07:11:11.131Z"
     },
     {
         "key": "ps_l",
@@ -50,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-25T05:22:29.083Z",
-        "lastAccessed": "2025-10-25T05:22:29.083Z"
+        "creation": "2025-10-25T07:11:11.131Z",
+        "lastAccessed": "2025-10-25T07:11:11.131Z"
     },
     {
         "key": "ps_n",
@@ -59,8 +59,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-25T05:22:29.083Z",
-        "lastAccessed": "2025-10-25T05:22:29.083Z"
+        "creation": "2025-10-25T07:11:11.131Z",
+        "lastAccessed": "2025-10-25T07:11:11.131Z"
     },
     {
         "key": "c_user",
@@ -68,8 +68,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-25T05:22:29.083Z",
-        "lastAccessed": "2025-10-25T05:22:29.083Z"
+        "creation": "2025-10-25T07:11:11.131Z",
+        "lastAccessed": "2025-10-25T07:11:11.131Z"
     },
     {
         "key": "xs",
@@ -77,8 +77,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-25T05:22:29.084Z",
-        "lastAccessed": "2025-10-25T05:22:29.084Z"
+        "creation": "2025-10-25T07:11:11.131Z",
+        "lastAccessed": "2025-10-25T07:11:11.131Z"
     },
     {
         "key": "pas",
@@ -86,34 +86,34 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-25T05:22:29.084Z",
-        "lastAccessed": "2025-10-25T05:22:29.084Z"
+        "creation": "2025-10-25T07:11:11.131Z",
+        "lastAccessed": "2025-10-25T07:11:11.131Z"
     },
     {
         "key": "fr",
-        "value": "0oiyAjO5FJyPqfu1L.AWfcaD4sjykLL2tfCRGgRBZJPLtkt6HFqrfXtDdJ0wFjLqWTOfc.Bo87VN..AAA.0.0.Bo-uLS.AWe-ZXmmHSFx5jPztLzo3UKk6tg",
+        "value": "0oiyAjO5FJyPqfu1L.AWdcW2aVDOatsUN-KpyPKpbEUGJs2Zb3M0zgcjGDOVqFZkL7Dik.Bo87VN..AAA.0.0.Bo_F6h.AWf7SoMfEvONc4VvAOf8191OYUc",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-25T05:22:29.084Z",
-        "lastAccessed": "2025-10-25T05:22:29.084Z"
+        "creation": "2025-10-25T07:11:11.131Z",
+        "lastAccessed": "2025-10-25T07:11:11.131Z"
     },
     {
         "key": "fbl_st",
-        "value": "100423418%3BT%3A29354542",
+        "value": "101437430%3BT%3A29356163",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-25T05:22:29.084Z",
-        "lastAccessed": "2025-10-25T05:22:29.084Z"
+        "creation": "2025-10-25T07:11:11.131Z",
+        "lastAccessed": "2025-10-25T07:11:11.131Z"
     },
     {
         "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2964%3Btimestamp%3A1761272530",
+        "value": "v2%3Bclient_version%3A2964%3Btimestamp%3A1761369762",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-25T05:22:29.084Z",
-        "lastAccessed": "2025-10-25T05:22:29.084Z"
+        "creation": "2025-10-25T07:11:11.131Z",
+        "lastAccessed": "2025-10-25T07:11:11.131Z"
     }
 ]
