--- a/appstate.json
+++ b/appstate.json
@@ -5,8 +5,8 @@
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2025-10-26T04:16:36.512Z",
-        "lastAccessed": "2025-10-26T04:16:36.513Z"
+        "creation": "2025-10-26T04:36:46.548Z",
+        "lastAccessed": "2025-10-26T04:36:46.549Z"
     },
     {
         "key": "datr",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-26T04:16:36.513Z",
-        "lastAccessed": "2025-10-26T04:16:36.513Z"
+        "creation": "2025-10-26T04:36:46.549Z",
+        "lastAccessed": "2025-10-26T04:36:46.549Z"
     },
     {
         "key": "sb",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-26T04:16:36.513Z",
-        "lastAccessed": "2025-10-26T04:16:36.513Z"
+        "creation": "2025-10-26T04:36:46.549Z",
+        "lastAccessed": "2025-10-26T04:36:46.549Z"
     },
     {
         "key": "vpd",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-26T04:16:36.513Z",
-        "lastAccessed": "2025-10-26T04:16:36.513Z"
+        "creation": "2025-10-26T04:36:46.549Z",
+        "lastAccessed": "2025-10-26T04:36:46.549Z"
     },
     {
         "key": "ps_l",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-26T04:16:36.513Z",
-        "lastAccessed": "2025-10-26T04:16:36.513Z"
+        "creation": "2025-10-26T04:36:46.549Z",
+        "lastAccessed": "2025-10-26T04:36:46.549Z"
     },
     {
         "key": "ps_n",
@@ -50,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-26T04:16:36.513Z",
-        "lastAccessed": "2025-10-26T04:16:36.513Z"
+        "creation": "2025-10-26T04:36:46.549Z",
+        "lastAccessed": "2025-10-26T04:36:46.549Z"
     },
     {
         "key": "pas",
@@ -59,8 +59,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-26T04:16:36.513Z",
-        "lastAccessed": "2025-10-26T04:16:36.513Z"
+        "creation": "2025-10-26T04:36:46.549Z",
+        "lastAccessed": "2025-10-26T04:36:46.549Z"
     },
     {
         "key": "locale",
@@ -68,8 +68,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-26T04:16:36.513Z",
-        "lastAccessed": "2025-10-26T04:16:36.513Z"
+        "creation": "2025-10-26T04:36:46.549Z",
+        "lastAccessed": "2025-10-26T04:36:46.549Z"
     },
     {
         "key": "c_user",
@@ -77,8 +77,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-26T04:16:36.513Z",
-        "lastAccessed": "2025-10-26T04:16:36.513Z"
+        "creation": "2025-10-26T04:36:46.549Z",
+        "lastAccessed": "2025-10-26T04:36:46.549Z"
     },
     {
         "key": "xs",
@@ -86,34 +86,34 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-26T04:16:36.513Z",
-        "lastAccessed": "2025-10-26T04:16:36.513Z"
+        "creation": "2025-10-26T04:36:46.549Z",
+        "lastAccessed": "2025-10-26T04:36:46.550Z"
     },
     {
         "key": "fr",
-        "value": "0oiyAjO5FJyPqfu1L.AWek8y7bCzcjdeVQKIxNLxV3-Cc1wgAJAl7LpIkDXaXiFsHAm0Y.Bo87VN..AAA.0.0.Bo_aBi.AWeNEbKQa-Elkund4DmQD2alHCs",
+        "value": "0oiyAjO5FJyPqfu1L.AWfHwIVV_GDCyBA-Tn0H9okEF_y7uixuM4vCF9jyW21KTKms39w.Bo87VN..AAA.0.0.Bo_aRu.AWf0XYNxgfz8oAgP33UCck8jXjQ",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-26T04:16:36.513Z",
-        "lastAccessed": "2025-10-26T04:16:36.513Z"
+        "creation": "2025-10-26T04:36:46.550Z",
+        "lastAccessed": "2025-10-26T04:36:46.550Z"
     },
     {
         "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2965%3Btimestamp%3A1761452130",
+        "value": "v2%3Bclient_version%3A2965%3Btimestamp%3A1761453166",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-26T04:16:36.513Z",
-        "lastAccessed": "2025-10-26T04:16:36.513Z"
+        "creation": "2025-10-26T04:36:46.550Z",
+        "lastAccessed": "2025-10-26T04:36:46.550Z"
     },
     {
         "key": "fbl_st",
-        "value": "101520015%3BT%3A29357535",
+        "value": "101530967%3BT%3A29357552",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-26T04:16:36.513Z",
-        "lastAccessed": "2025-10-26T04:16:36.513Z"
+        "creation": "2025-10-26T04:36:46.550Z",
+        "lastAccessed": "2025-10-26T04:36:46.550Z"
     }
-]
+        ]
