--- a/appstate.json
+++ b/appstate.json
@@ -1,12 +1,12 @@
 [
     {
         "key": "dbln",
-        "value": "%7B%2261581472800892%22%3A%22pjA6fTY7%22%2C%2261582632423896%22%3A%227cp8HIhS%22%7D",
+        "value": "%7B%2261581472800892%22%3A%221Lyf7B1I%22%2C%2261582632423896%22%3A%227cp8HIhS%22%7D",
         "domain": "facebook.com",
         "path": "/login/device-based/",
         "hostOnly": false,
-        "creation": "2025-10-26T04:36:46.548Z",
-        "lastAccessed": "2025-10-26T04:36:46.549Z"
+        "creation": "2025-10-26T12:08:02.685Z",
+        "lastAccessed": "2025-10-26T12:08:02.686Z"
     },
     {
         "key": "datr",
@@ -14,8 +14,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-26T04:36:46.549Z",
-        "lastAccessed": "2025-10-26T04:36:46.549Z"
+        "creation": "2025-10-26T12:08:02.686Z",
+        "lastAccessed": "2025-10-26T12:08:02.686Z"
     },
     {
         "key": "sb",
@@ -23,8 +23,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-26T04:36:46.549Z",
-        "lastAccessed": "2025-10-26T04:36:46.549Z"
+        "creation": "2025-10-26T12:08:02.686Z",
+        "lastAccessed": "2025-10-26T12:08:02.686Z"
     },
     {
         "key": "vpd",
@@ -32,8 +32,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-26T04:36:46.549Z",
-        "lastAccessed": "2025-10-26T04:36:46.549Z"
+        "creation": "2025-10-26T12:08:02.686Z",
+        "lastAccessed": "2025-10-26T12:08:02.686Z"
     },
     {
         "key": "ps_l",
@@ -41,8 +41,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-26T04:36:46.549Z",
-        "lastAccessed": "2025-10-26T04:36:46.549Z"
+        "creation": "2025-10-26T12:08:02.686Z",
+        "lastAccessed": "2025-10-26T12:08:02.686Z"
     },
     {
         "key": "ps_n",
@@ -50,8 +50,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-26T04:36:46.549Z",
-        "lastAccessed": "2025-10-26T04:36:46.549Z"
+        "creation": "2025-10-26T12:08:02.686Z",
+        "lastAccessed": "2025-10-26T12:08:02.686Z"
     },
     {
         "key": "pas",
@@ -59,8 +59,8 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-26T04:36:46.549Z",
-        "lastAccessed": "2025-10-26T04:36:46.549Z"
+        "creation": "2025-10-26T12:08:02.686Z",
+        "lastAccessed": "2025-10-26T12:08:02.686Z"
     },
     {
         "key": "locale",
@@ -68,8 +68,26 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-26T04:36:46.549Z",
-        "lastAccessed": "2025-10-26T04:36:46.549Z"
+        "creation": "2025-10-26T12:08:02.686Z",
+        "lastAccessed": "2025-10-26T12:08:02.686Z"
+    },
+    {
+        "key": "m_pixel_ratio",
+        "value": "2.75",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-10-26T12:08:02.686Z",
+        "lastAccessed": "2025-10-26T12:08:02.686Z"
+    },
+    {
+        "key": "wd",
+        "value": "393x869",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-10-26T12:08:02.686Z",
+        "lastAccessed": "2025-10-26T12:08:02.686Z"
     },
     {
         "key": "c_user",
@@ -77,43 +95,43 @@
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-26T04:36:46.549Z",
-        "lastAccessed": "2025-10-26T04:36:46.549Z"
+        "creation": "2025-10-26T12:08:02.686Z",
+        "lastAccessed": "2025-10-26T12:08:02.686Z"
     },
     {
         "key": "xs",
-        "value": "27%3Aw7txm7SE9eEN2Q%3A2%3A1761452042%3A-1%3A-1",
+        "value": "18%3A8fU-ymYLOStevw%3A2%3A1761480441%3A-1%3A-1",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-26T04:36:46.549Z",
-        "lastAccessed": "2025-10-26T04:36:46.550Z"
+        "creation": "2025-10-26T12:08:02.686Z",
+        "lastAccessed": "2025-10-26T12:08:02.686Z"
     },
     {
         "key": "fr",
-        "value": "0oiyAjO5FJyPqfu1L.AWfHwIVV_GDCyBA-Tn0H9okEF_y7uixuM4vCF9jyW21KTKms39w.Bo87VN..AAA.0.0.Bo_aRu.AWf0XYNxgfz8oAgP33UCck8jXjQ",
+        "value": "0oiyAjO5FJyPqfu1L.AWfr24ON_C4SK8MgtbW-OsBp9zVLhmb4krFXlE2M285Ark-Ce3Q.Bo87VN..AAA.0.0.Bo_g78.AWcERxW75wtEhtyzvkJCMzccE9M",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-26T04:36:46.550Z",
-        "lastAccessed": "2025-10-26T04:36:46.550Z"
-    },
-    {
-        "key": "wl_cbv",
-        "value": "v2%3Bclient_version%3A2965%3Btimestamp%3A1761453166",
-        "domain": "facebook.com",
-        "path": "/",
-        "hostOnly": false,
-        "creation": "2025-10-26T04:36:46.550Z",
-        "lastAccessed": "2025-10-26T04:36:46.550Z"
+        "creation": "2025-10-26T12:08:02.686Z",
+        "lastAccessed": "2025-10-26T12:08:02.686Z"
     },
     {
         "key": "fbl_st",
-        "value": "101530967%3BT%3A29357552",
+        "value": "100633121%3BT%3A29358007",
         "domain": "facebook.com",
         "path": "/",
         "hostOnly": false,
-        "creation": "2025-10-26T04:36:46.550Z",
-        "lastAccessed": "2025-10-26T04:36:46.550Z"
+        "creation": "2025-10-26T12:08:02.686Z",
+        "lastAccessed": "2025-10-26T12:08:02.686Z"
+    },
+    {
+        "key": "wl_cbv",
+        "value": "v2%3Bclient_version%3A2965%3Btimestamp%3A1761480444",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2025-10-26T12:08:02.686Z",
+        "lastAccessed": "2025-10-26T12:08:02.686Z"
     }
-]
+        ]
