--- a/config.json
+++ b/config.json
@@ -16,12 +16,12 @@
     "EMAIL": "",
     "PASSWORD": "",
     "OTPKEY": "",
-    "BOTNAME": "𝗦𝗛𝗨𝗩𝗢 𝗕𝗕𝗭𝗭𝗭",
+    "BOTNAME": " 𝗕𝗕𝗭𝗭𝗭",
     "PREFIX": "-",
     "ADMINBOT": [
-        "100082387123597",
-        "61581472800892",
-        "100091661496284"
+        "61582913249409",
+        "",
+        ""
     ],
     "NDH": [
         "100001039692046"
